--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>http</artifactId>
+    <groupId>com.fedorov</groupId>
+    <artifactId>httpserver</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+
     <build>
         <plugins>
             <plugin>
@@ -60,17 +63,18 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
-
-
-
-
-
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-
-
-
-
 
 </project>
